fix post and get users by username
