# src/app/routes/auth.routes.js
@@ -5,6 +5,7 @@ const controller = require('../controllers/auth.controller');
  * @author Matheus Mol
  */
 
-router.post('/', controller.accessToken);
+router.post('/access-token', controller.accessToken);
+router.get('/refresh-token', controller.refreshToken);
 
-module.exports = app => app.use('/api/v1/auth/access-token', router);
+module.exports = app => app.use('/api/v1/auth', router);
