# src/app/routes/user.routes.js
@@ -5,8 +5,7 @@ const controller = require('../controllers/user.controller');
  * @author Matheus Mol
  */
 
-router.post('/modelUser', controller.postModelUser);
+router.post('/', controller.post);
+router.get('/:username', controller.get);
 
-router.post('/normalUser', controller.postNormalUser);
-
-module.exports = app => app.use('/api/v1/user', router);
+module.exports = app => app.use('/api/v1/users', router);
